Add Job Fair page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,5 +28,7 @@ extra:
         url: /mentoring/
       - title: "Chinatown"
         url: /chinatown/
+      - title: "Job Fair 2017"
+        url: /jobfair/
       - title: "Chinese School"
         url: /chineseschool/
