add pdf content

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ extra:
         url: /mentoring/
       - title: "Chinatown"
         url: /chinatown/
-      - title: "Job Fair 2017"
+      - title: "Job Fair"
         url: /jobfair/
       - title: "Chinese School"
         url: /chineseschool/
