Change chineseschool to youthconference

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,5 +30,5 @@ extra:
         url: /chinatown/
       - title: "Job Fair"
         url: /jobfair/
-      - title: "Chinese School"
-        url: /chineseschool/
+      - title: "Youth Conference"
+        url: /youthconference/
