--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,3 +2,7 @@ XiBei Zhao:
   name: "西北兆"
   avatar: "/assets/images/authors/Zhao-XiBei.jpg"
   location: "Portland, OR"
+Min Kong:
+  name: "孔敏"
+  avatar: "/assets/images/authors/Kong-Min.jpg"
+  location: "Portland, OR"
