add Rosaline Hui

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,3 +6,7 @@ Min Kong:
   name: "孔敏"
   avatar: "/assets/images/authors/Kong-Min.jpg"
   location: "Portland, OR"
+Rosaline Hui:
+  name: "Rosaline Hui"
+  avatar: "/assets/images/authors/Rosaline-Hui.jpg"
+  location: "Portland, OR"
