add Chamber of Commerce to side navigation

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,3 +36,5 @@ extra:
         url: /youthconference/
       - title: "Youth Roundtable"
         url: /youthroundtable/
+      - title: "Chamber of Commerce"
+        url: /chambercommerce/
