add chinese new year

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,3 +34,5 @@ extra:
         url: /youthconference/
       - title: "Youth Roundtable"
         url: /youthroundtable/
+      - title: "Chinese New Year"
+        url: /newywar/
