--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,4 +35,4 @@ extra:
       - title: "Youth Roundtable"
         url: /youthroundtable/
       - title: "Chinese New Year"
-        url: /newyear/
+        url: /lunarnewyear/
