--- a/_config.yml
+++ b/_config.yml
@@ -241,6 +241,9 @@ collections:
   chinatown_sayno:
     output: true
     permalink: /chinatown/sayno/:path/
+  chinatown_newyear:
+    output: true
+    permalink: /chinatown/newyear/:path/
   communities_media:
     output: true
     permalink: /resources/:collection/:path/
@@ -397,6 +400,13 @@ defaults:
   - scope:
       path: ""
       type: chinatown_sayno
+    values:
+      layout: single
+      author_profile: false
+  # chinatown_newyear
+  - scope:
+      path: ""
+      type: chinatown_newyear
     values:
       layout: single
       author_profile: false
