try to add space

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,6 +24,8 @@ extra:
     children:
       - title: "Volunteering"
         url: /volunteering/
+      - title: " "
+        url: 
       - title: "Mentoring"
         url: /mentoring/
       - title: "Youth Conference"
