--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,12 +32,16 @@ extra:
         url: /youthconference/
       - title: "Youth Roundtable"
         url: /youthroundtable/
+      - title: "---"
+        url:
       - title: "Commerce"
         url: /chambercommerce/
       - title: "Job Fair"
         url: /jobfair/
       - title: "Community Fair"
         url: /fair/
+      - title: "---"
+        url:
       - title: "Chinatown"
         url: /chinatown/
       - title: "Chinese New Year"
