--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,7 +34,7 @@ extra:
         url: /youthroundtable/
       - title: "---"
         url:
-      - title: "Commerce"
+      - title: "Commerce Chamber"
         url: /chambercommerce/
       - title: "Job Fair"
         url: /jobfair/
