--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 twitter:
   username               :
 facebook:
-  username               :
+  username               : "Oregon-Chinese-Coalition-568850810154157"
   app_id                 :
   publisher              :
 og_image                 : # Open Graph/Twitter default site image
