--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,3 +10,7 @@ Rosaline Hui:
   name: "Rosaline Hui"
   avatar: "/assets/images/authors/Rosaline-Hui.jpg"
   location: "Portland, OR"
+Nancy:
+  name: "Nancy"
+  avatar: "/assets/images/members/Nancy-Yang.jpg"
+  location: "Portland, OR"
