--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -46,3 +46,5 @@ extra:
         url: /chinatown/
       - title: "Chinese New Year"
         url: /lunarnewyear/
+      - title: "Mid-Autumn Festival"
+        url: /midautumnfestival/
