--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,7 +32,7 @@ extra:
         url: /mentoring/
       - title: "Youth Conference"
         url: /youthconference/
-      - title: "Youth Roundtable 12/29"
+      - title: "Youth Roundtable"
         url: /youthroundtable/
       - title: "---"
         url:
