--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -42,7 +42,7 @@ extra:
         url: /fair/
       - title: "Commerce Chamber"
         url: /chambercommerce/
-      - title: "Startup Forum"
+      - title: "Entrepreneurs Forum"
         url: /startup/
       - title: "---"
         url:
