--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -50,5 +50,5 @@ extra:
         url: /chinatown/
       - title: "Chinese New Year"
         url: /lunarnewyear/
-      - title: "Chinese Festival"
+      - title: "2019 Chinese Festival"
         url: /chinesefestival/
