add drum team page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -50,5 +50,7 @@ extra:
         url: /chinatown/
       - title: "Chinese New Year"
         url: /lunarnewyear/
+      - title: "Drum Team"
+        url: /drumteam/
       - title: "2019 Chinese Festival"
         url: /chinesefestival/
