--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -52,5 +52,5 @@ extra:
         url: /lunarnewyear/
       - title: "Drum Team"
         url: /drumteam/
-      - title: "2019 Chinese Festival"
+      - title: "Chinese Festival"
         url: /chinesefestival/
