--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -52,5 +52,5 @@ extra:
         url: /chinesefestival/
       - title: "Chinese New Year"
         url: /lunarnewyear/
-      - title: "Drum Team"
+      - title: "Drum Program"
         url: /drumteam/
