--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,9 @@ extra:
         url: /winterdrive/
       - title: "---"
         url:
-      - title: "Mentoring"
+      - title: "Youth Camps"
+        url: /camps/
+      - title: "Youth Mentoring"
         url: /mentoring/
       - title: "Youth Conference"
         url: /youthconference/
