--- a/_config.yml
+++ b/_config.yml
@@ -238,9 +238,9 @@ collections:
   chinatown_gallery:
     output: true
     permalink: /chinatown/:path/
-  chinatown_sayno:
+  chinatown_engage:
     output: true
-    permalink: /chinatown/sayno/:path/
+    permalink: /chinatown/engage/:path/
   chinatown_newyear:
     output: true
     permalink: /chinatown/newyear/:path/
@@ -399,10 +399,10 @@ defaults:
     values:
       layout: single
       author_profile: false
-  # chinatown_sayno
+  # chinatown_engage
   - scope:
       path: ""
-      type: chinatown_sayno
+      type: chinatown_engage
     values:
       layout: single
       author_profile: false
