--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,6 +34,8 @@ extra:
         url: /camps/
       - title: "Youth Mentoring"
         url: /mentoring/
+      - title: "Youth Orchestra"
+        url: /youthorchestra/
       - title: "Youth Conference"
         url: /youthconference/
       - title: "Youth Roundtable"
