--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -58,3 +58,5 @@ extra:
         url: /chinesefestival/
       - title: "Chinese New Year"
         url: /lunarnewyear/
+      - title: "Lantern Festival"
+        url: /lanternfestival/
