--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -54,7 +54,7 @@ extra:
         url:
       - title: "Chinatown"
         url: /chinatown/
-      - title: "Chinese Festival"
+      - title: "<b>Chinese Festival</b>"
         url: /chinesefestival/
       - title: "Chinese New Year"
         url: /lunarnewyear/
