--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -32,7 +32,7 @@ extra:
         url:
       - title: "Youth Camps"
         url: /camps/
-      - title: "Youth Conference"
+      - title: "<b>Youth Conference</b>"
         url: /youthconference/
       - title: "Youth Drum Team"
         url: /drumteam/
