--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
   - title: "Resources"
     url: /resources/
   - title: "COVID-19"
-    url: /eventnow/
+    url: /coronavirus/
   - title: "Donate"
     url: /communityfund/
   - title: "Contact Us"
