feat(config): add twitter username

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : "ChineseOregon"
 facebook:
   username               : "Oregon-Chinese-Coalition-568850810154157"
   app_id                 :
