--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -50,7 +50,7 @@ extra:
         url: /fair/
       - title: "Entrepreneurs Forum"
         url: /startup/
-      - title: ""<b>Weekly Talk</b>"
+      - title: "<b>Weekly Talk</b>"
         url: /weeklytalk/
       - title: "---"
         url:
