--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -56,7 +56,7 @@ extra:
         url:
       - title: "Chinatown"
         url: /chinatown/
-      - title: "<b>Chinese Festival</b>"
+      - title: "Chinese Festival"
         url: /chinesefestival/
       - title: "Chinese New Year"
         url: /lunarnewyear/
