--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /about/
   - title: "Resources"
     url: /resources/
-  - title: "Answers to COVID-19"
+  - title: "COVID-19"
     url: /coronavirus/
   - title: "Donate"
     url: /communityfund/
