--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,7 +30,7 @@ extra:
         url: /winterdrive/
       - title: "---"
         url:
-      - title: "Youth Ambassadors"
+      - title: "<b>Youth Ambassadors</b>"
         url: /youthambassadors/
       - title: "Youth Camps"
         url: /camps/
