--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -60,5 +60,5 @@ extra:
         url: /chinesefestival/
       - title: "Chinese New Year"
         url: /lunarnewyear/
-      - title: "Lantern Festival"
+      - title: "<b>Lantern Festival</b>"
         url: /lanternfestival/
