--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,6 +30,8 @@ extra:
         url: /winterdrive/
       - title: "---"
         url:
+      - title: "<b>Peer Advisors</b>"
+        url: /peeradvisors/
       - title: "<b>Youth Ambassadors</b>"
         url: /youthambassadors/
       - title: "Youth Camps"
