--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,7 +26,7 @@ extra:
         url: /pvsa/
       - title: "<b>Volunteering</b>"
         url: /volunteering/
-      - title: "Winter Drive"
+      - title: "<b>Winter Drive</b>"
         url: /winterdrive/
       - title: "---"
         url:
