--- a/_config.yml
+++ b/_config.yml
@@ -77,10 +77,10 @@ analytics:
 
 # Site Author
 author:
-  name             : 
+  name             :
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : 
-  location         : 
+  bio              :
+  location         :
   email            :
   uri              :
   bitbucket        :
@@ -94,7 +94,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : 
+  linkedin         :
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
@@ -373,6 +373,9 @@ collections:
   festival:
     output: true
     permalink: /chinesefestival/:path/
+  peeradvisors:
+    output: true
+    permalink: /peeradvisors/:path/
 
 # Defaults
 defaults:
@@ -720,6 +723,13 @@ defaults:
   - scope:
       path: ""
       type: festival
+    values:
+      layout: single
+      author_profile: false
+  # peeradvisors
+  - scope:
+      path: ""
+      type: peeradvisors
     values:
       layout: single
       author_profile: false
