--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,6 +30,8 @@ extra:
         url: /winterdrive/
       - title: "---"
         url:
+      - title: "Peer Advisors"
+        url: /peeradvisors/
       - title: "Youth Ambassadors"
         url: /youthambassadors/
       - title: "Youth Camps"
