--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,7 +22,7 @@ main:
 extra:
   - title: Programs
     children:
-      - title: "<b>PVSA Honorees</b>"
+      - title: "PVSA Honorees"
         url: /pvsa/
       - title: "Volunteering"
         url: /volunteering/
@@ -30,9 +30,9 @@ extra:
         url: /winterdrive/
       - title: "---"
         url:
-      - title: "<b>Peer Advisors</b>"
+      - title: "Peer Advisors"
         url: /peeradvisors/
-      - title: "<b>Youth Ambassadors</b>"
+      - title: "Youth Ambassadors"
         url: /youthambassadors/
       - title: "Youth Camps"
         url: /camps/
