--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -44,6 +44,8 @@ extra:
         url: /mentoring/
       - title: "Youth Roundtable"
         url: /youthroundtable/
+      - title: "Youth Vlog"
+        url: /youthvlog/
       - title: "---"
         url:
       - title: "Commerce Chamber"
