--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,7 +30,7 @@ extra:
         url: /winterdrive/
       - title: "---"
         url:
-      - title: "Peer Advisors"
+      - title: "Youth Peer Advisors"
         url: /peeradvisors/
       - title: "Youth Ambassadors"
         url: /youthambassadors/
