try to switcjh toggle menu with programs

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ main:
   #   url: /sitemap/
 
 extra:
-  - title: Programs
+  - title: 
     children:
       - title: "Mental Health"
         url: /mentalhealth/
