--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,7 +40,7 @@ extra:
         url: /youthambassadors/
       - title: "Youth Camps"
         url: /camps/
-      - title: "Youth Conference"
+      - title: "<b>Youth Conference</b>"
         url: /youthconference/
       - title: "Youth Drum Team"
         url: /drumteam/
@@ -58,7 +58,7 @@ extra:
         url: /artexhibit/
       - title: "Chinatown"
         url: /chinatown/
-      - title: "Chinese Festival"
+      - title: "<b>Chinese Festival</b>"
         url: /chinesefestival/
       - title: "Chinese New Year"
         url: /lunarnewyear/
