--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -58,7 +58,7 @@ extra:
         url: /artexhibit/
       - title: "Chinatown"
         url: /chinatown/
-      - title: "<b>Chinese Festival</b>"
+      - title: "Chinese Festival"
         url: /chinesefestival/
       - title: "Chinese New Year"
         url: /lunarnewyear/
