--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -62,7 +62,7 @@ extra:
         url: /chinesefestival/
       - title: "Chinese New Year"
         url: /lunarnewyear/
-      - title: "<b>Moon Festival</b>"
+      - title: "<b>Mid-Autumn Festival</b>"
         url: /lanternfestival/
       - title: "---"
         url:
