--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,6 +38,8 @@ extra:
         url: /pvsa/
       - title: "Youth Ambassadors"
         url: /youthambassadors/
+      - title: "Youth Art Contest"
+        url: /artcontest/
       - title: "Youth Camps"
         url: /camps/
       - title: "Youth Conference"
