--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,7 +38,7 @@ extra:
         url: /pvsa/
       - title: "Youth Ambassadors"
         url: /youthambassadors/
-      - title: "Youth Art Contest"
+      - title: "<b>Youth Art Contest</b>"
         url: /artcontest/
       - title: "Youth Camps"
         url: /camps/
