--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -64,7 +64,7 @@ extra:
         url: /chinesefestival/
       - title: "Chinese New Year"
         url: /lunarnewyear/
-      - title: "Culture Auction"
+      - title: "<b>Culture Auction</b>"
         url: /auction/
       - title: "Mid-Autumn Festival"
         url: /lanternfestival/
