--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,6 +22,8 @@ main:
 extra:
   - title:
     children:
+      - title: "<b>Charity Auction</b>"
+        url: /auction/
       - title: "Mental Health"
         url: /mentalhealth/
       - title: "Volunteering"
@@ -64,8 +66,6 @@ extra:
         url: /chinesefestival/
       - title: "Chinese New Year"
         url: /lunarnewyear/
-      - title: "<b>Culture Auction</b>"
-        url: /auction/
       - title: "Mid-Autumn Festival"
         url: /lanternfestival/
       - title: "---"
